# JNJ-ResMamba-Time-Series-Modeling

./: .gitignore  AGENTS.md  CLAUDE.md  convert_parquet_to_h5.py  predict_TSO_segment.py  predict_TSO_segment_patch.py  predict_TSO_segment_patch_dlrtc.py  predict_TSO_segment_patch_h5.py  predict_TSO_segment_patch_ray.py  predict_scratch_segment.py  predict_scratch_segment_h5.py  pretrain.py  pyproject.toml  requirement-ml.txt  requirement-tso.txt  requirements-tso.txt  session_export 2.md
Helpers/: DL_helpers.py  DL_helpers_shim.py  DL_models.py  DL_models_shim.py
NS_production/: NS-pipeline.py  audit.py  preprocessing.py  requirements.txt  test_pipeline.sh
baselines_classical/: cnn_classifier.py  dl_features.py  features.py  tsfresh_features.py  windowing.py
data/: __init__.py  augmentation.py  batching.py  loading.py  loading_ukb_h5.py  padding.py  prepare_data.py  preprocess_ukb_h5.py  preprocessing.py  transform.py
docs/: Codebase_Overview_2026-05-18.docx  README.md  algorithms.md  deep_tso_experiment_plan.md  deep_tso_innovation_report.html  deployment.md  project_overview.md
evaluation/: __init__.py  compare_models.py  metrics.py  plot_qualitative.py  postprocessing.py  predict_qualitative.py  prediction_analysis.py  threshold_sweep.py  tso_analysis.py  tso_validation.py
experiments/: README.md  run_ablation.sh  run_deploy_classical.sh  run_preprocess_ukb.sh  run_pretrain_ukb_dino.sh  run_pretrain_ukb_mae.sh  run_scratch_mbav1.sh  run_smoke_pretrained.sh
legacy/: README.md  convert_parquet_to_h5.py  predict_TSO_segment.py  predict_TSO_segment_patch.py  (+6 more)
(+215 files in other folders)
