[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scratch-detection"
version = "0.1.0"
description = "Deep learning models for scratch detection from wearable accelerometer data"
requires-python = ">=3.10"

# Core dependencies are installed via requirements-ml.txt in the Domino shell_script block.
# This file exists primarily so that `pip install -e .` makes the project packages
# (models, data, losses, evaluation, utils) importable from anywhere.
dependencies = []

[tool.setuptools.packages.find]
include = [
    "models*",
    "data*",
    "losses*",
    "evaluation*",
    "utils*",
    "Helpers*",
]
